✨ feat(api): get  menu detail list by role id api
